src/objects/Customer_Account__c.object
<CustomObject>
    <fields>
        <fullName>Amount_per_Month_on_credit_account__c</fullName>
        <formula>( Balance_Account__c   / Number_of_Months__c) + ( fixed_rate__c / Number_of_Months__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount per Month on credit account</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_per_month_on_debit_account__c</fullName>
        <formula>Balance_Account__c  * fixed_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount per Month on debit account</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balance_Account__c</fullName>
        <label>Balance</label>
        <summarizedField>Transaction__c.Transaction_Amount__c</summarizedField>
        <summaryForeignKey>Transaction__c.Customer_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Close_Data__c</fullName>
        <label>Close Data</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Accounts</relationshipLabel>
        <relationshipName>Customer_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Number_of_Months__c</fullName>
        <formula>IF( 
( Close_Data__c  -  TODAY() ) / 365 * 12 &lt; 1, 1, (Close_Data__c  -  TODAY()) / 365 * 12
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fixed_rate__c</fullName>
        <label>Fixed Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Customer Account</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Accounts</pluralLabel>
    <recordTypes>
        <fullName>Credit</fullName>
        <active>true</active>
        <label>Credit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Deposit</fullName>
        <active>true</active>
        <label>Deposit</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>